Refactor noOptionsArgs access method
Replace get(0) with getFirst() for better clarity and intent, ensuring the code explicitly retrieves the first element from noOptionsArgs. Also, replace unused parameter in lambda with an underscore for improved readability and adherence to conventions.